hphp/hack/test/typecheck/constraints/class_method.php.exp
File "class_method.php", line 6, characters 26-35:
Some type constraint(s) here are violated (Typing[4110])
File "class_method.php", line 3, characters 22-22:
'T' is a constrained type
File "class_method.php", line 3, characters 27-29:
This is a num (int/float)
File "class_method.php", line 6, characters 37-37:
It is incompatible with a value of generic type T
